[tool.poetry]
name = "saltybet-asyncio"
version = "0.1.0"
description = ""
authors = ["Nick Pancakes <nick@pncks.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-socketio = {extras = ["asyncio_client"], version = "^4.6.0"}
aiorun = "^2020.6.1"
selectolax = "^0.2.10"
pendulum = "^2.1.2"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.3"
ipdb = "^0.13.4"
mypy = "^0.800"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
