[tool.poetry]
name = "saltybet-asyncio"
version = "0.1.0"
description = ""
authors = ["Nick Pancakes <nick@pncks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = {extras = ["asyncio_client"], version = "^4.6.0"}
selectolax = "^0.2.10"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b0"
pylint = "^2.5.3"
mypy = "^0.800"
pylama = "^7.7.1"
flake8 = "^3.9.0"
flake8-black = "^0.2.1"
flake8-builtins = "^1.5.3"
pre-commit = "^2.11.1"
shed = "^0.3.3"
flake8-sfs = "^0.0.3"
flake8-bandit = "^2.1.2"
flake8-broken-line = "^0.3.0"
flake8-bugbear = "^21.3.2"
flake8-comprehensions = "^3.4.0"
flake8-debugger = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.0.0"
flake8-polyfill = "^1.0.2"
flake8-rst-docstrings = "^0.0.14"
flake8-string-format = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
